--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/AbdulrahmanNahhas/nahhas-hub#readme",
   "dependencies": {
+    "lucide-react": "^0.262.0",
     "next": "^13.0.6",
     "nextra": "latest",
     "nextra-theme-docs": "latest",
